--- a/style.css
+++ b/style.css
@@ -1,50 +1,51 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f6f4;
+    background-color: yellow;
     margin:20px;
     text-align:center;
 }
 h1{
-    color:red;
+    color:darkred;
     margin-bottom:30px;
 }
-.product-card {
-    background-color:black;
-    border: 1px solid red;
-    border-radius: 5px;
+.product-card   {
+    background-color:white;
+    border: 3px solid red;
+    border:2px solid black;
     padding: 20px;
     max-width: 300px;
     margin: 0 auto;
-    border-radius:8px;
+    border-radius: 10px;
 }
-.product-image  h2{
+.product-image  img {
     width: 100%;
     height: auto;
-    border-radius: 5px;
-    color:#333;
+    border-radius: 6px;
+    color:blue;
     margin-top:15px;
 }
-.product-description {
+.product-description h2 {
     font-size: 14px;
-    color:yellow;
+    color:dimgray;
     margin: 15px 0;
 }
 .product-price {
     font-size: 18px;
-    color: #333;
+    color:red;
     font-weight: bold;
     margin-bottom: 15px;
 }
 .add-to-cart-button {
     background-color: #28a745;
-    color: #fff;
-    border: none;
+    color: darkgreen;
     padding: 10px 15px;
+    border: none;
     border-radius: 5px;
+    
     
 }
 .add-to-cart-button:hover {
-    background-color: #218838;
+    background-color: darkblue;
     
 }
     
